# Update-matrix

./: .gitignore  =2.1.0  AGENTS.md  Patch_file.patch  add_remarks_field.py  check_page.sh  current_diff.txt  interview_console_security_and_matrix_hardening.patch  output.txt  output2.txt  patch_extension_email.py  pyproject.toml  requirements.txt  setup.py  syntax_out.txt  test_api_res.py  test_page.py
.agents/rules/: mobile-api-rules.md
.github/workflows/: agent-trigger.yml  copilot-bug-fix.yml  merged_staging.yml  restrict_copilot_issues.yml  staging.yml  test-production.yml
backups/: 20260407_001850-onefm_local-files.tar  20260407_001850-onefm_local-site_config_backup.json
job_applicant_magic_link/: package.json
one_fm/: __init__.py  add_interviewer.py  add_nationality_cf.py  check_bypass.py  check_email.py  check_emp.py  check_emp_user.py  check_employees.py  check_error.py  check_ids.py  check_last_log.py  check_live_errors.py  check_path.py  check_recent_resignations.py  check_reports_to.py  check_resignation.py  check_rules.py  check_traceback.py  check_user.py  check_user_status.py  check_validation_errors.py  check_wf.py  clear_test_data.py  create_email.py  create_wf.py  diag_email.py  final_check.py  final_fix.py  find_employees.py  fix_date.py  fix_db.py  fix_email.py  fix_matrix.py  fix_secret_properly.py  fix_workflow.py  gen_proper_keys.py  get_admin.py  get_errors.py  get_errors_full.py  get_rule.py  (+58 more)
one_fm/after_migrate/: execute.py
one_fm/api/: api.py  doc_events.py  mobile_utils.py  notification.py  slack.py  tasks.py  utils.py  whatsapp.py
one_fm/config/: grd.py
one_fm/developer/: debug_dmarc.py  dmarc_processor.py
one_fm/events/: email_queue.py  error_log.py  issue.py
one_fm/fixtures/: assignment_rule.json  custom_field.json  doctype_layout.json  email_template.json  hd_ticket_template.json  print_format.json  property_setter.json  workflow.json  workflow_action_master.json  workflow_state.json
one_fm/grd/: utils.py
one_fm/hiring/: test_hiring_utils.py  utils.py
one_fm/one_fm/: hr_utils.py  interview_utils.py  project_custom.py  utils.py
one_fm/overrides/: asset.py  asset_movement.py  assignment_rule.py  attendance.py  attendance_request.py  employee.py  goal.py  (+43 more)
(+2455 files in other folders)
